--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,17 @@ name = "EIT4Julia"
 uuid = "b783373a-fbd8-4ca0-a6a9-131c3d08b4bc"
 authors = ["DanielBoigk <dn.boigk@gmail.com>"]
 version = "0.1.0"
+
+
+[deps]
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+MultivariatePolynomials = "102ac46a-7ee4-5c85-9060-abc95bfdeaa3"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+TypedPolynomials = "afbbf031-7a57-5f58-a1b9-b774a0fad08d"
+
