--- a/Project.toml
+++ b/Project.toml
@@ -16,3 +16,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TypedPolynomials = "afbbf031-7a57-5f58-a1b9-b774a0fad08d"
 
+[extras]
+FerriteGmsh = "4f95f4f8-b27c-4ae5-9a39-ea55e634e36b"
+Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
